--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "extends": [
     "@rocketseat/eslint-config/next",
-    "next/core-web-vitals"    
+    "next/core-web-vitals",
+    "next/typescript" 
   ],
   "rules": {
     "react/no-unescaped-entities": "off",
